--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "API for Sweet Corner project, including user auth",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
