--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "nodemon": "^1.19.0"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "jwt-simple": "^0.5.6",
