--- a/config/db.template
+++ b/config/db.template
@@ -2,5 +2,12 @@ module.exports = {
     database: '',
     host: '',
     password: '',
-    username: ''
+    username: '',
+    initialUser: {
+        email: '',
+        firstName: '',
+        lastName: '',
+        password: '',
+        role: ''
+    }
 }
