--- a/config/db.template
+++ b/config/db.template
@@ -8,6 +8,6 @@ module.exports = {
         firstName: '',
         lastName: '',
         password: '',
-        role: ''
+        role: '' // Role mid
     }
 }
