Added dev script with NODE_ENV set to development

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API for Sweet Corner project, including user auth",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
